parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     statements -> comment statements
Rule 3     statements -> comment
Rule 4     statements -> statement
Rule 5     statements -> statement comment
Rule 6     comment -> TEXT_COMMENT
Rule 7     statement -> LBRACE state RBRACE
Rule 8     state -> assign_statement state
Rule 9     state -> if_statement state
Rule 10    state -> while_statement state
Rule 11    state -> assign_statement
Rule 12    state -> if_statement
Rule 13    state -> while_statement
Rule 14    state -> comment state
Rule 15    state -> comment
Rule 16    assign_statement -> ID ASSIGN E SEMICOLON
Rule 17    assign_statement -> ID ASSIGN INPUT LPAR RPAR SEMICOLON
Rule 18    assign_statement -> ID ASSIGN INPUT LPAR TEXT RPAR SEMICOLON
Rule 19    assign_statement -> PRINT LPAR TEXT RPAR SEMICOLON
Rule 20    assign_statement -> PRINT LPAR ID RPAR SEMICOLON
Rule 21    assign_statement -> PRINT LPAR NUMBER RPAR SEMICOLON
Rule 22    assign_statement -> PRINT LPAR NUMBER_FLOAT RPAR SEMICOLON
Rule 23    assign_statement -> PRINT LPAR TEXT COMMA ID RPAR SEMICOLON
Rule 24    assign_statement -> PRINT LPAR E RPAR SEMICOLON
Rule 25    if_statement -> IF LPAR E LESS E RPAR statement ELSE statement
Rule 26    if_statement -> IF LPAR E LARGER E RPAR statement ELSE statement
Rule 27    if_statement -> IF LPAR E UNEQUAL E RPAR statement ELSE statement
Rule 28    if_statement -> IF LPAR E EQUAL E RPAR statement ELSE statement
Rule 29    if_statement -> IF LPAR E LESS E RPAR statement
Rule 30    if_statement -> IF LPAR E LARGER E RPAR statement
Rule 31    if_statement -> IF LPAR E UNEQUAL E RPAR statement
Rule 32    if_statement -> IF LPAR E EQUAL E RPAR statement
Rule 33    while_statement -> WHILE LPAR E LESS E RPAR statement
Rule 34    while_statement -> WHILE LPAR E LESS E RPAR statement ELSE statement
Rule 35    while_statement -> WHILE LPAR E LARGER E RPAR statement
Rule 36    while_statement -> WHILE LPAR E LARGER E RPAR statement ELSE statement
Rule 37    while_statement -> WHILE LPAR E UNEQUAL E RPAR statement
Rule 38    while_statement -> WHILE LPAR E UNEQUAL E RPAR statement ELSE statement
Rule 39    while_statement -> WHILE LPAR E EQUAL E RPAR statement
Rule 40    while_statement -> WHILE LPAR E EQUAL E RPAR statement ELSE statement
Rule 41    E -> expression
Rule 42    E -> LEN LPAR ID RPAR
Rule 43    E -> STR LPAR ID RPAR
Rule 44    E -> CHOP LPAR ID RPAR
Rule 45    E -> ID LBRACKET NUMBER RBRACKET
Rule 46    E -> ID LBRACKET NUMBER COLON NUMBER RBRACKET
Rule 47    E -> ID LBRACKET COLON NUMBER RBRACKET
Rule 48    E -> ID LBRACKET NUMBER COLON RBRACKET
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression TIMES expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    expression -> expression POW expression
Rule 54    expression -> LPAR expression RPAR
Rule 55    expression -> NUMBER
Rule 56    expression -> NUMBER_FLOAT
Rule 57    expression -> ID
Rule 58    expression -> TEXT

Terminals, with rules where they appear

ASSIGN               : 16 17 18
CHOP                 : 44
COLON                : 46 47 48
COMMA                : 23
DIVIDE               : 52
ELSE                 : 25 26 27 28 34 36 38 40
EQUAL                : 28 32 39 40
ID                   : 16 17 18 20 23 42 43 44 45 46 47 48 57
IF                   : 25 26 27 28 29 30 31 32
INPUT                : 17 18
LARGER               : 26 30 35 36
LBRACE               : 7
LBRACKET             : 45 46 47 48
LEN                  : 42
LESS                 : 25 29 33 34
LPAR                 : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 42 43 44 54
MINUS                : 50
NUMBER               : 21 45 46 46 47 48 55
NUMBER_FLOAT         : 22 56
PLUS                 : 49
POW                  : 53
PRINT                : 19 20 21 22 23 24
RBRACE               : 7
RBRACKET             : 45 46 47 48
RPAR                 : 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 42 43 44 54
SEMICOLON            : 16 17 18 19 20 21 22 23 24
STR                  : 43
TEXT                 : 18 19 23 58
TEXT_COMMENT         : 6
TIMES                : 51
UNEQUAL              : 27 31 37 38
WHILE                : 33 34 35 36 37 38 39 40
error                : 

Nonterminals, with rules where they appear

E                    : 16 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40
assign_statement     : 8 11
comment              : 2 3 5 14 15
expression           : 41 49 49 50 50 51 51 52 52 53 53 54
if_statement         : 9 12
start                : 0
state                : 7 8 9 10 14
statement            : 4 5 25 25 26 26 27 27 28 28 29 30 31 32 33 34 34 35 36 36 37 38 38 39 40 40
statements           : 1 2
while_statement      : 10 13

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) statements -> . comment statements
    (3) statements -> . comment
    (4) statements -> . statement
    (5) statements -> . statement comment
    (6) comment -> . TEXT_COMMENT
    (7) statement -> . LBRACE state RBRACE

    TEXT_COMMENT    shift and go to state 5
    LBRACE          shift and go to state 6

    start                          shift and go to state 1
    statements                     shift and go to state 2
    comment                        shift and go to state 3
    statement                      shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> statements .

    $end            reduce using rule 1 (start -> statements .)


state 3

    (2) statements -> comment . statements
    (3) statements -> comment .
    (2) statements -> . comment statements
    (3) statements -> . comment
    (4) statements -> . statement
    (5) statements -> . statement comment
    (6) comment -> . TEXT_COMMENT
    (7) statement -> . LBRACE state RBRACE

    $end            reduce using rule 3 (statements -> comment .)
    TEXT_COMMENT    shift and go to state 5
    LBRACE          shift and go to state 6

    comment                        shift and go to state 3
    statements                     shift and go to state 7
    statement                      shift and go to state 4

state 4

    (4) statements -> statement .
    (5) statements -> statement . comment
    (6) comment -> . TEXT_COMMENT

    $end            reduce using rule 4 (statements -> statement .)
    TEXT_COMMENT    shift and go to state 5

    comment                        shift and go to state 8

state 5

    (6) comment -> TEXT_COMMENT .

    TEXT_COMMENT    reduce using rule 6 (comment -> TEXT_COMMENT .)
    LBRACE          reduce using rule 6 (comment -> TEXT_COMMENT .)
    $end            reduce using rule 6 (comment -> TEXT_COMMENT .)
    ID              reduce using rule 6 (comment -> TEXT_COMMENT .)
    PRINT           reduce using rule 6 (comment -> TEXT_COMMENT .)
    IF              reduce using rule 6 (comment -> TEXT_COMMENT .)
    WHILE           reduce using rule 6 (comment -> TEXT_COMMENT .)
    RBRACE          reduce using rule 6 (comment -> TEXT_COMMENT .)


state 6

    (7) statement -> LBRACE . state RBRACE
    (8) state -> . assign_statement state
    (9) state -> . if_statement state
    (10) state -> . while_statement state
    (11) state -> . assign_statement
    (12) state -> . if_statement
    (13) state -> . while_statement
    (14) state -> . comment state
    (15) state -> . comment
    (16) assign_statement -> . ID ASSIGN E SEMICOLON
    (17) assign_statement -> . ID ASSIGN INPUT LPAR RPAR SEMICOLON
    (18) assign_statement -> . ID ASSIGN INPUT LPAR TEXT RPAR SEMICOLON
    (19) assign_statement -> . PRINT LPAR TEXT RPAR SEMICOLON
    (20) assign_statement -> . PRINT LPAR ID RPAR SEMICOLON
    (21) assign_statement -> . PRINT LPAR NUMBER RPAR SEMICOLON
    (22) assign_statement -> . PRINT LPAR NUMBER_FLOAT RPAR SEMICOLON
    (23) assign_statement -> . PRINT LPAR TEXT COMMA ID RPAR SEMICOLON
    (24) assign_statement -> . PRINT LPAR E RPAR SEMICOLON
    (25) if_statement -> . IF LPAR E LESS E RPAR statement ELSE statement
    (26) if_statement -> . IF LPAR E LARGER E RPAR statement ELSE statement
    (27) if_statement -> . IF LPAR E UNEQUAL E RPAR statement ELSE statement
    (28) if_statement -> . IF LPAR E EQUAL E RPAR statement ELSE statement
    (29) if_statement -> . IF LPAR E LESS E RPAR statement
    (30) if_statement -> . IF LPAR E LARGER E RPAR statement
    (31) if_statement -> . IF LPAR E UNEQUAL E RPAR statement
    (32) if_statement -> . IF LPAR E EQUAL E RPAR statement
    (33) while_statement -> . WHILE LPAR E LESS E RPAR statement
    (34) while_statement -> . WHILE LPAR E LESS E RPAR statement ELSE statement
    (35) while_statement -> . WHILE LPAR E LARGER E RPAR statement
    (36) while_statement -> . WHILE LPAR E LARGER E RPAR statement ELSE statement
    (37) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement
    (38) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement ELSE statement
    (39) while_statement -> . WHILE LPAR E EQUAL E RPAR statement
    (40) while_statement -> . WHILE LPAR E EQUAL E RPAR statement ELSE statement
    (6) comment -> . TEXT_COMMENT

    ID              shift and go to state 14
    PRINT           shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    TEXT_COMMENT    shift and go to state 5

    state                          shift and go to state 9
    assign_statement               shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    comment                        shift and go to state 13

state 7

    (2) statements -> comment statements .

    $end            reduce using rule 2 (statements -> comment statements .)


state 8

    (5) statements -> statement comment .

    $end            reduce using rule 5 (statements -> statement comment .)


state 9

    (7) statement -> LBRACE state . RBRACE

    RBRACE          shift and go to state 18


state 10

    (8) state -> assign_statement . state
    (11) state -> assign_statement .
    (8) state -> . assign_statement state
    (9) state -> . if_statement state
    (10) state -> . while_statement state
    (11) state -> . assign_statement
    (12) state -> . if_statement
    (13) state -> . while_statement
    (14) state -> . comment state
    (15) state -> . comment
    (16) assign_statement -> . ID ASSIGN E SEMICOLON
    (17) assign_statement -> . ID ASSIGN INPUT LPAR RPAR SEMICOLON
    (18) assign_statement -> . ID ASSIGN INPUT LPAR TEXT RPAR SEMICOLON
    (19) assign_statement -> . PRINT LPAR TEXT RPAR SEMICOLON
    (20) assign_statement -> . PRINT LPAR ID RPAR SEMICOLON
    (21) assign_statement -> . PRINT LPAR NUMBER RPAR SEMICOLON
    (22) assign_statement -> . PRINT LPAR NUMBER_FLOAT RPAR SEMICOLON
    (23) assign_statement -> . PRINT LPAR TEXT COMMA ID RPAR SEMICOLON
    (24) assign_statement -> . PRINT LPAR E RPAR SEMICOLON
    (25) if_statement -> . IF LPAR E LESS E RPAR statement ELSE statement
    (26) if_statement -> . IF LPAR E LARGER E RPAR statement ELSE statement
    (27) if_statement -> . IF LPAR E UNEQUAL E RPAR statement ELSE statement
    (28) if_statement -> . IF LPAR E EQUAL E RPAR statement ELSE statement
    (29) if_statement -> . IF LPAR E LESS E RPAR statement
    (30) if_statement -> . IF LPAR E LARGER E RPAR statement
    (31) if_statement -> . IF LPAR E UNEQUAL E RPAR statement
    (32) if_statement -> . IF LPAR E EQUAL E RPAR statement
    (33) while_statement -> . WHILE LPAR E LESS E RPAR statement
    (34) while_statement -> . WHILE LPAR E LESS E RPAR statement ELSE statement
    (35) while_statement -> . WHILE LPAR E LARGER E RPAR statement
    (36) while_statement -> . WHILE LPAR E LARGER E RPAR statement ELSE statement
    (37) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement
    (38) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement ELSE statement
    (39) while_statement -> . WHILE LPAR E EQUAL E RPAR statement
    (40) while_statement -> . WHILE LPAR E EQUAL E RPAR statement ELSE statement
    (6) comment -> . TEXT_COMMENT

    RBRACE          reduce using rule 11 (state -> assign_statement .)
    ID              shift and go to state 14
    PRINT           shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    TEXT_COMMENT    shift and go to state 5

    assign_statement               shift and go to state 10
    state                          shift and go to state 19
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    comment                        shift and go to state 13

state 11

    (9) state -> if_statement . state
    (12) state -> if_statement .
    (8) state -> . assign_statement state
    (9) state -> . if_statement state
    (10) state -> . while_statement state
    (11) state -> . assign_statement
    (12) state -> . if_statement
    (13) state -> . while_statement
    (14) state -> . comment state
    (15) state -> . comment
    (16) assign_statement -> . ID ASSIGN E SEMICOLON
    (17) assign_statement -> . ID ASSIGN INPUT LPAR RPAR SEMICOLON
    (18) assign_statement -> . ID ASSIGN INPUT LPAR TEXT RPAR SEMICOLON
    (19) assign_statement -> . PRINT LPAR TEXT RPAR SEMICOLON
    (20) assign_statement -> . PRINT LPAR ID RPAR SEMICOLON
    (21) assign_statement -> . PRINT LPAR NUMBER RPAR SEMICOLON
    (22) assign_statement -> . PRINT LPAR NUMBER_FLOAT RPAR SEMICOLON
    (23) assign_statement -> . PRINT LPAR TEXT COMMA ID RPAR SEMICOLON
    (24) assign_statement -> . PRINT LPAR E RPAR SEMICOLON
    (25) if_statement -> . IF LPAR E LESS E RPAR statement ELSE statement
    (26) if_statement -> . IF LPAR E LARGER E RPAR statement ELSE statement
    (27) if_statement -> . IF LPAR E UNEQUAL E RPAR statement ELSE statement
    (28) if_statement -> . IF LPAR E EQUAL E RPAR statement ELSE statement
    (29) if_statement -> . IF LPAR E LESS E RPAR statement
    (30) if_statement -> . IF LPAR E LARGER E RPAR statement
    (31) if_statement -> . IF LPAR E UNEQUAL E RPAR statement
    (32) if_statement -> . IF LPAR E EQUAL E RPAR statement
    (33) while_statement -> . WHILE LPAR E LESS E RPAR statement
    (34) while_statement -> . WHILE LPAR E LESS E RPAR statement ELSE statement
    (35) while_statement -> . WHILE LPAR E LARGER E RPAR statement
    (36) while_statement -> . WHILE LPAR E LARGER E RPAR statement ELSE statement
    (37) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement
    (38) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement ELSE statement
    (39) while_statement -> . WHILE LPAR E EQUAL E RPAR statement
    (40) while_statement -> . WHILE LPAR E EQUAL E RPAR statement ELSE statement
    (6) comment -> . TEXT_COMMENT

    RBRACE          reduce using rule 12 (state -> if_statement .)
    ID              shift and go to state 14
    PRINT           shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    TEXT_COMMENT    shift and go to state 5

    if_statement                   shift and go to state 11
    state                          shift and go to state 20
    assign_statement               shift and go to state 10
    while_statement                shift and go to state 12
    comment                        shift and go to state 13

state 12

    (10) state -> while_statement . state
    (13) state -> while_statement .
    (8) state -> . assign_statement state
    (9) state -> . if_statement state
    (10) state -> . while_statement state
    (11) state -> . assign_statement
    (12) state -> . if_statement
    (13) state -> . while_statement
    (14) state -> . comment state
    (15) state -> . comment
    (16) assign_statement -> . ID ASSIGN E SEMICOLON
    (17) assign_statement -> . ID ASSIGN INPUT LPAR RPAR SEMICOLON
    (18) assign_statement -> . ID ASSIGN INPUT LPAR TEXT RPAR SEMICOLON
    (19) assign_statement -> . PRINT LPAR TEXT RPAR SEMICOLON
    (20) assign_statement -> . PRINT LPAR ID RPAR SEMICOLON
    (21) assign_statement -> . PRINT LPAR NUMBER RPAR SEMICOLON
    (22) assign_statement -> . PRINT LPAR NUMBER_FLOAT RPAR SEMICOLON
    (23) assign_statement -> . PRINT LPAR TEXT COMMA ID RPAR SEMICOLON
    (24) assign_statement -> . PRINT LPAR E RPAR SEMICOLON
    (25) if_statement -> . IF LPAR E LESS E RPAR statement ELSE statement
    (26) if_statement -> . IF LPAR E LARGER E RPAR statement ELSE statement
    (27) if_statement -> . IF LPAR E UNEQUAL E RPAR statement ELSE statement
    (28) if_statement -> . IF LPAR E EQUAL E RPAR statement ELSE statement
    (29) if_statement -> . IF LPAR E LESS E RPAR statement
    (30) if_statement -> . IF LPAR E LARGER E RPAR statement
    (31) if_statement -> . IF LPAR E UNEQUAL E RPAR statement
    (32) if_statement -> . IF LPAR E EQUAL E RPAR statement
    (33) while_statement -> . WHILE LPAR E LESS E RPAR statement
    (34) while_statement -> . WHILE LPAR E LESS E RPAR statement ELSE statement
    (35) while_statement -> . WHILE LPAR E LARGER E RPAR statement
    (36) while_statement -> . WHILE LPAR E LARGER E RPAR statement ELSE statement
    (37) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement
    (38) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement ELSE statement
    (39) while_statement -> . WHILE LPAR E EQUAL E RPAR statement
    (40) while_statement -> . WHILE LPAR E EQUAL E RPAR statement ELSE statement
    (6) comment -> . TEXT_COMMENT

    RBRACE          reduce using rule 13 (state -> while_statement .)
    ID              shift and go to state 14
    PRINT           shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    TEXT_COMMENT    shift and go to state 5

    while_statement                shift and go to state 12
    state                          shift and go to state 21
    assign_statement               shift and go to state 10
    if_statement                   shift and go to state 11
    comment                        shift and go to state 13

state 13

    (14) state -> comment . state
    (15) state -> comment .
    (8) state -> . assign_statement state
    (9) state -> . if_statement state
    (10) state -> . while_statement state
    (11) state -> . assign_statement
    (12) state -> . if_statement
    (13) state -> . while_statement
    (14) state -> . comment state
    (15) state -> . comment
    (16) assign_statement -> . ID ASSIGN E SEMICOLON
    (17) assign_statement -> . ID ASSIGN INPUT LPAR RPAR SEMICOLON
    (18) assign_statement -> . ID ASSIGN INPUT LPAR TEXT RPAR SEMICOLON
    (19) assign_statement -> . PRINT LPAR TEXT RPAR SEMICOLON
    (20) assign_statement -> . PRINT LPAR ID RPAR SEMICOLON
    (21) assign_statement -> . PRINT LPAR NUMBER RPAR SEMICOLON
    (22) assign_statement -> . PRINT LPAR NUMBER_FLOAT RPAR SEMICOLON
    (23) assign_statement -> . PRINT LPAR TEXT COMMA ID RPAR SEMICOLON
    (24) assign_statement -> . PRINT LPAR E RPAR SEMICOLON
    (25) if_statement -> . IF LPAR E LESS E RPAR statement ELSE statement
    (26) if_statement -> . IF LPAR E LARGER E RPAR statement ELSE statement
    (27) if_statement -> . IF LPAR E UNEQUAL E RPAR statement ELSE statement
    (28) if_statement -> . IF LPAR E EQUAL E RPAR statement ELSE statement
    (29) if_statement -> . IF LPAR E LESS E RPAR statement
    (30) if_statement -> . IF LPAR E LARGER E RPAR statement
    (31) if_statement -> . IF LPAR E UNEQUAL E RPAR statement
    (32) if_statement -> . IF LPAR E EQUAL E RPAR statement
    (33) while_statement -> . WHILE LPAR E LESS E RPAR statement
    (34) while_statement -> . WHILE LPAR E LESS E RPAR statement ELSE statement
    (35) while_statement -> . WHILE LPAR E LARGER E RPAR statement
    (36) while_statement -> . WHILE LPAR E LARGER E RPAR statement ELSE statement
    (37) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement
    (38) while_statement -> . WHILE LPAR E UNEQUAL E RPAR statement ELSE statement
    (39) while_statement -> . WHILE LPAR E EQUAL E RPAR statement
    (40) while_statement -> . WHILE LPAR E EQUAL E RPAR statement ELSE statement
    (6) comment -> . TEXT_COMMENT

    RBRACE          reduce using rule 15 (state -> comment .)
    ID              shift and go to state 14
    PRINT           shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    TEXT_COMMENT    shift and go to state 5

    comment                        shift and go to state 13
    state                          shift and go to state 22
    assign_statement               shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12

state 14

    (16) assign_statement -> ID . ASSIGN E SEMICOLON
    (17) assign_statement -> ID . ASSIGN INPUT LPAR RPAR SEMICOLON
    (18) assign_statement -> ID . ASSIGN INPUT LPAR TEXT RPAR SEMICOLON

    ASSIGN          shift and go to state 23


state 15

    (19) assign_statement -> PRINT . LPAR TEXT RPAR SEMICOLON
    (20) assign_statement -> PRINT . LPAR ID RPAR SEMICOLON
    (21) assign_statement -> PRINT . LPAR NUMBER RPAR SEMICOLON
    (22) assign_statement -> PRINT . LPAR NUMBER_FLOAT RPAR SEMICOLON
    (23) assign_statement -> PRINT . LPAR TEXT COMMA ID RPAR SEMICOLON
    (24) assign_statement -> PRINT . LPAR E RPAR SEMICOLON

    LPAR            shift and go to state 24


state 16

    (25) if_statement -> IF . LPAR E LESS E RPAR statement ELSE statement
    (26) if_statement -> IF . LPAR E LARGER E RPAR statement ELSE statement
    (27) if_statement -> IF . LPAR E UNEQUAL E RPAR statement ELSE statement
    (28) if_statement -> IF . LPAR E EQUAL E RPAR statement ELSE statement
    (29) if_statement -> IF . LPAR E LESS E RPAR statement
    (30) if_statement -> IF . LPAR E LARGER E RPAR statement
    (31) if_statement -> IF . LPAR E UNEQUAL E RPAR statement
    (32) if_statement -> IF . LPAR E EQUAL E RPAR statement

    LPAR            shift and go to state 25


state 17

    (33) while_statement -> WHILE . LPAR E LESS E RPAR statement
    (34) while_statement -> WHILE . LPAR E LESS E RPAR statement ELSE statement
    (35) while_statement -> WHILE . LPAR E LARGER E RPAR statement
    (36) while_statement -> WHILE . LPAR E LARGER E RPAR statement ELSE statement
    (37) while_statement -> WHILE . LPAR E UNEQUAL E RPAR statement
    (38) while_statement -> WHILE . LPAR E UNEQUAL E RPAR statement ELSE statement
    (39) while_statement -> WHILE . LPAR E EQUAL E RPAR statement
    (40) while_statement -> WHILE . LPAR E EQUAL E RPAR statement ELSE statement

    LPAR            shift and go to state 26


state 18

    (7) statement -> LBRACE state RBRACE .

    TEXT_COMMENT    reduce using rule 7 (statement -> LBRACE state RBRACE .)
    $end            reduce using rule 7 (statement -> LBRACE state RBRACE .)
    ELSE            reduce using rule 7 (statement -> LBRACE state RBRACE .)
    ID              reduce using rule 7 (statement -> LBRACE state RBRACE .)
    PRINT           reduce using rule 7 (statement -> LBRACE state RBRACE .)
    IF              reduce using rule 7 (statement -> LBRACE state RBRACE .)
    WHILE           reduce using rule 7 (statement -> LBRACE state RBRACE .)
    RBRACE          reduce using rule 7 (statement -> LBRACE state RBRACE .)


state 19

    (8) state -> assign_statement state .

    RBRACE          reduce using rule 8 (state -> assign_statement state .)


state 20

    (9) state -> if_statement state .

    RBRACE          reduce using rule 9 (state -> if_statement state .)


state 21

    (10) state -> while_statement state .

    RBRACE          reduce using rule 10 (state -> while_statement state .)


state 22
